...
            modifier = Modifier
                .align(Alignment.BottomCenter)
                .zIndex(2f)
                .height(72.dp)
        ) {
            CardWithImageOrIcon(
                modifier = Modifier.testTag("addPurchase"),
                icon = true,
                resource = R.drawable.ic_fill_add,
                size = IconSemiLarge,
                tint = MaterialTheme.colors.onPrimary,
                backgroundColor = MaterialTheme.colors.primary,
                elevation = 4.dp, onClick = onAddPurchase
...
                        amount = abs(amount),
                        currency = currency,
                        isCredit = amount > 0
                    )

                    OutlinedButton(
                        modifier = Modifier.testTag("leaveOrSettleUp"),
                        onClick = {
                            if (amount == 0.0) {
                                onLeaveGroup()
                            } else {
                                onSettleUp(amount)
                            }
...
