...
            }
        }

        MyLog.log(
            StructureLayer.Screen,
            "Composable",
            "NewPurchaseScreen",
            LogType.Info,
            "errors: showError: ${showError.value} priceError: $priceError consumerError: $consumerError buyersError: $buyersError"
        )

        MyLog.log(
            StructureLayer.Screen,
...
                                            }
                                    )

                                }
                                Text("")
                                InputTextField(
                                    modifier = Modifier.testTag("priceTextField"),
                                    text = price,
                                    keyboardType = KeyboardType.Decimal,
                                    label = "قیمت",
                                    error = "قیمت نمی\u200Cتواند 0 باشد",
                                    hasError = priceError,
                                    enabled = amount == 0.0,
...
