...
                            )
                        }

                        val meItem = groupViewModel.meMember
//                    Divider(startIndent = 55.dp)
                        LazyColumn(
                            modifier = Modifier.padding(top = 10.dp).testTag("membersLazyColumn")
                        ) {
                            if (meItem != null) {
                                item {
                                    UserItem(
                                        modifier = Modifier.testTag("userItem"),
                                        user = me,
...
